<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/QuizLayout"
    tools:context=".activites.QuizActivity">

    <LinearLayout
        android:layout_width="430dp"
        android:layout_height="760dp"
        android:orientation="vertical"
        android:background="@drawable/background_gradient_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imageViewQuiz"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/quizapp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="alternative 1"
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="alternative 2"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="alternative 3"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"/>

        <TextView
            android:id="@+id/textViewQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>