...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            app:srcCompat="@drawable/quizapp" />

        <Button
            android:id="@+id/playquiz"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:background="@drawable/custom_button_start"
            android:text="Start quiz!"
...
